--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,22 @@
+/*HEADER*/
+
+.header {
+    background-color: #1f2937;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+ul {
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    
+}
 
 li {
     font-size:18px;
     color: #E5E7EB;
-}
-
-.header {
-    background-color: #1f2937;
 }
