.html and .css footer section is complete

--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,13 @@ li {
 a {
     color: #E5E7EB;
 }
+
+/*FOOTER*/
+
+.footer {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    background-color: #1f2937;
+    color:#E5E7EB;
+}
