--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+    margin:0;
+    display:flex;
+    flex-direction:column;
+}
+
 /*HEADER*/
 
 .header {
@@ -25,6 +31,35 @@ li {
 
 a {
     color: #E5E7EB;
+}
+
+/*FIRST SECTION*/
+
+.first {
+    color: #E5E7EB;
+    background-color: #1f2937;
+    display:flex;
+    flex-direction:row;
+    justify-content: space-evenly;
+    align-items: center; 
+    flex-grow:1;
+    min-width:0;
+}
+
+.first-text {
+   padding:25px;
+   min-width: 0;
+}
+
+
+button {
+    background-color: #3882f6;
+    color:#E5E7EB;
+    border-radius: 8%;
+    display: block;
+    padding:5px 20px;
+    font-weight:700;
+    border:none;
 }
 
 /*FOOTER*/
