--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,15 @@ a {
     background-color: #1f2937;
     display:flex;
     flex-direction:row;
-    justify-content: space-around;
-    align-items: center; 
-    flex-basis:0;
+    flex-basis: 0;
+    padding: 50px 150px;
+    align-items: center;
+    
 }
 
 .first-text {
-
-   flex-basis: 0;
+    padding-right: inherit;
+    
 }
 
 
@@ -59,6 +60,11 @@ button {
     padding:5px 20px;
     font-weight:700;
     border:none;
+}
+
+.first-image {
+    justify-content: center;
+
 }
 
 /*FOOTER*/
