--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     background-color: #1f2937;
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     
 }
@@ -83,11 +83,13 @@ button {
 /*QUOTE*/
 
 .quote {
+    
     background-color: #E5E7EB;
     display:flex;
     flex-direction:column;
     align-items: center;
     padding: 0 450px;
+    flex-grow:1;
 
 }
 
